--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -11,5 +11,5 @@ const { classes = '' } = Astro.props as Props;
 ---
 
 <div class={`min-w-xs max-w-screen-xl container ${classes}`}>
-  <slot />
+  <slot></slot>
 </div>
