--- a/src/components/LocalizedLink.astro
+++ b/src/components/LocalizedLink.astro
@@ -8,4 +8,4 @@ const locale = getLocaleFromUrlPathname(pathname);
 const path = localizePath(to, locale);
 ---
 
-<a href={path} {...rest}><slot /></a>
+<a href={path} {...rest}><slot></slot></a>
