--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -6,7 +6,8 @@ export interface Props {
 
 const { title, headline } = Astro.props as Props;
 ---
-<div class="mb-18 text-center">
-  <h1 class="text-6xl uppercase font-bold heading divider">{title}</h1>
+
+<div class='mb-18 text-center'>
+  <h1 class='text-6xl uppercase font-bold heading divider'>{title}</h1>
   {headline && <div class="mt-8 text-lg uppercase">{headline}</div>}
 </div>
