--- a/src/components/SEO/SEO.astro
+++ b/src/components/SEO/SEO.astro
@@ -3,7 +3,7 @@ export interface Props {
   seo: SEO;
 }
 
-import i18n from '@/config/i18n';
+import i18n from '@/config/i18n.mjs';
 import seoConfig from '@/config/seo.config.mjs';
 import config from '@/config/website';
 import SeoBase from './SeoBase.astro';
