--- a/src/components/footer/components/LegalInfo.astro
+++ b/src/components/footer/components/LegalInfo.astro
@@ -19,4 +19,4 @@ if (foundingDate) {
 const dot_text = text ? `. ${text}` : '';
 ---
 
-<div><span class="mr-3">© {foundingYear}{currentYear}</span><span>{name}{dot_text}</span></div>
+<div><span class='mr-3'>© {foundingYear}{currentYear}</span><span>{name}{dot_text}</span></div>
