--- a/src/components/footer/components/SocialLink.astro
+++ b/src/components/footer/components/SocialLink.astro
@@ -18,8 +18,8 @@ const ariaLabel = utils.upperFirst(name);
 const iconName = icons[name] ? icons[name] : name;
 ---
 
-<a class="social-link" href={to} target="_blank" rel="noreferrer" aria-label={ariaLabel} title={title}>
-  <Icon class="h-8 w-8" name={iconName} />
+<a class='social-link' href={to} target='_blank' rel='noreferrer' aria-label={ariaLabel} title={title}>
+  <Icon class='h-8 w-8' name={iconName} />
 </a>
 
 <style>
