--- a/src/components/header/components/ThemeSwitch.astro
+++ b/src/components/header/components/ThemeSwitch.astro
@@ -12,12 +12,12 @@ const { classes = '' } = Astro.props as Props;
 <label class={`theme-switch ${classes}`}>
   <input
     id={THEME_SWITCH_ID}
-    type="checkbox"
-    title="Switch between dark and light mode (currently light mode)"
-    aria-label="Switch between dark and light mode (currently light mode)"
+    type='checkbox'
+    title='Switch between dark and light mode (currently light mode)'
+    aria-label='Switch between dark and light mode (currently light mode)'
   />
-  <Icon name="sun-regular" class="sun" />
-  <Icon name="moon-regular" class="moon" />
+  <Icon name='sun-regular' class='sun' />
+  <Icon name='moon-regular' class='moon' />
 </label>
 
 <script define:vars={{ THEME_SWITCH_ID }}>
