--- a/src/components/GoogleGTag.astro
+++ b/src/components/GoogleGTag.astro
@@ -8,9 +8,11 @@ const { id } = Astro.props as Props;
 const gtagUrl = `https://www.googletagmanager.com/gtag/js?id=${id}`;
 ---
 
-<link rel="dns-prefetch" href="https://www.google-analytics.com" />
+<link rel='dns-prefetch' href='https://www.google-analytics.com' />
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src={gtagUrl}></script>
+<script async src={gtagUrl}>
+
+</script>
 <script define:vars={{ id }}>
   window.dataLayer = window.dataLayer || [];
   function gtag() {
