--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -23,8 +23,7 @@ if (!buttonCaption) {
   throw new Error('expected 1 item in frontmatter for button caption in hero');
 }
 
-const sources = items.filter(({ image }) => image?.src)
-  .map(({ image: { alt, src, media } }) => ({ src, media, alt }));
+const sources = items.filter(({ image }) => image?.src).map(({ image: { alt, src, media } }) => ({ src, media, alt }));
 
 if (sources.length !== 2) {
   throw new Error('expected 2 items in frontmatter for hero image');
@@ -34,13 +33,13 @@ if (!sources[1].media) {
   throw new Error('media is expected for second hero image in frontmatter');
 }
 ---
-<div class="hero">
+
+<div id='hero' class='hero'>
   <Picture
     src={sources[0].src}
     alt={sources[0].alt}
-    placeholder="none"
-    preload="webp"
-    loading="eager"
+    placeholder='none'
+    loading='eager'
     format={['webp', 'jpeg']}
     artDirectives={[
       {
@@ -50,20 +49,16 @@ if (!sources[1].media) {
     ]}
   />
 
-  <div class="col-start-1 row-start-1 flex flex-col-reverse justify-center items-center px-4 text-center z-10">
-    <Button tag="a" to="#services">
+  <div class='col-start-1 row-start-1 flex flex-col-reverse justify-center items-center px-4 text-center z-10'>
+    <Button tag='a' to='#services'>
       {buttonCaption}
     </Button>
 
-    <h1 class="txt uppercase text-3xl md:mb-6 md:text-4xl lg:text-6xl">
+    <h1 class='txt uppercase text-3xl md:mb-6 md:text-4xl lg:text-6xl'>
       {title}
     </h1>
 
-    {headline && (
-      <div class="txt mb-8 text-2xl italic">
-        {headline}
-      </div>
-    )}
+    {headline && <div class="txt mb-8 text-2xl italic">{headline}</div>}
   </div>
 </div>
 
