--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -2,12 +2,11 @@
 import 'aos/dist/aos.css';
 import '../styles/global.css';
 
-import i18n from '@/config/i18n';
+import i18n from '@/config/i18n.mjs';
 import getLocaleFromUrlPathname from '@/helpers/getLocaleFromUrlPathname';
 import { fetchContacts, fetchSocialLinks, fetchAddress } from '@/api/yamls';
 
 import SEO from './SEO/SEO.astro';
-import Favicons from './Favicons.astro';
 import Header from './header/Header.astro';
 import Footer from './footer/Footer.astro';
 
@@ -20,8 +19,8 @@ const address = await fetchAddress(locale);
 
 const { seo } = Astro.props;
 
-// to avoid tsc error
-const currentLocale = i18n.locales[locale];
+// to avoid a tsc error
+const currentLocale = (i18n.locales as Record<string, any>)[locale];
 if (!currentLocale) {
   throw new Error(`Unknown locale ${locale}`);
 }
@@ -31,24 +30,21 @@ if (!currentLocale) {
 <!DOCTYPE html>
 <html lang={currentLocale.htmlLang}>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta charset='utf-8' />
+    <meta name='viewport' content='width=device-width' />
     <SEO seo={{ ...seo, contacts, socialLinks, address, locale, pathname }} />
-
-    <Favicons />
   </head>
   <body>
-    <div class="flex flex-col min-h-screen">
+    <div class='flex flex-col min-h-screen'>
       <Header locale={locale} />
-      <main class="w-full flex-auto pb-header lg:pb-header-xl">
-        <slot />
+      <main id='main' class='w-full flex-auto pb-header lg:pb-header-xl'>
+        <slot></slot>
       </main>
       <Footer contacts={contacts} socialLinks={socialLinks} address={address} />
     </div>
+    <script>
+      import AOS from 'aos';
+      AOS.init();
+    </script>
   </body>
 </html>
-
-<script>
-  // import AOS from 'aos';
-  // AOS.init();
-</script>
