--- a/src/components/SEO/components/Schema/JsonLD.astro
+++ b/src/components/SEO/components/Schema/JsonLD.astro
@@ -7,4 +7,6 @@ const { value } = Astro.props as Props;
 const space = process.env.NODE_ENV === 'development' ? 2 : undefined;
 ---
 
-<script type="application/ld+json" set:html={JSON.stringify(value, null, space)}></script>
+<script type='application/ld+json' set:html={JSON.stringify(value, null, space)}>
+
+</script>
