--- a/src/components/sections/Gallery.astro
+++ b/src/components/sections/Gallery.astro
@@ -1,48 +1,33 @@
 ---
-export interface Props {
-  section: Section;
-}
-
 import 'photoswipe/style.css';
 import PageSection from '../PageSection.astro';
 import GalleryItem from './GalleryItem.astro';
 
+export interface Props {
+  section: Section;
+}
+
 const {
   section: { id, title, subtitle, Content, items },
 } = Astro.props as Props;
-//     {items?.filter(({image}) => image?.src).map((item) => <GalleryItem item={item} />)}
 ---
-<PageSection id={id} title={title} subtitle={subtitle} classes="text-center">
+
+<PageSection id={id} title={title} subtitle={subtitle} classes='text-center'>
   <Content />
-  <div id="gallery--simple" class="pswp-gallery grid gap-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6">
-    {items?.filter(({image}) => image?.src).map((item) => <GalleryItem item={item} />)}
+  <div id='gallery--simple' class='pswp-gallery grid gap-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6'>
+    {items?.filter(({ image }) => image?.src).map((item) => <GalleryItem item={item} />)}
   </div>
 </PageSection>
 
 <script>
   import Lightbox from 'photoswipe/lightbox';
-  import PhotoSwipe from 'photoswipe';
-
-  // import DOMPurify from 'dompurify';
-  /**
-   * https://stackoverflow.com/questions/62081028/this-document-requires-trustedscripturl-assignment
-   */
-  /*
-  if (window.trustedTypes && window.trustedTypes.createPolicy) {
-    window.trustedTypes.createPolicy('default', {
-      createHTML: (string) => string,
-      // createHTML: (string) => DOMPurify.sanitize(string, {RETURN_TRUSTED_TYPE: true}),
-      createScriptURL: string => string, // warning: this is unsafe!
-      createScript: string => string, // warning: this is unsafe!
-    });
-  }
-  */
+  // import PhotoSwipe from 'photoswipe';
 
   const lightbox = new Lightbox({
     gallery: '#gallery--simple',
     children: 'a',
-    // pswpModule: () => import('photoswipe'),
-    pswpModule: PhotoSwipe,
+    pswpModule: () => import('photoswipe'),
+    // pswpModule: PhotoSwipe,
   });
   lightbox.init();
 </script>
