--- a/src/layouts/404.astro
+++ b/src/layouts/404.astro
@@ -4,7 +4,7 @@ import getLocaleFromUrlPathname from '@/helpers/getLocaleFromUrlPathname';
 import Layout from '@/components/LayoutSimple.astro';
 import Container from '@/components/Container.astro';
 
-const { pathname } = Astro.canonicalURL;
+const { pathname } = Astro.url;
 const locale = getLocaleFromUrlPathname(pathname);
 const { content } = Astro.props;
 
